Structured-Product-Labeling-(SPL)/Style-Sheets/CPID/dev/hpfb-cpid-core.css
/* ... */
.spl div.Index h1,
.spl div.Index h2 {
	margin-top: 0pt;
}

.spl div.Index h2 {
	margin-left: 1em;
	font-weight: normal;
}

.spl .Italics {	
	font-style: italic;
}
.spl .Noitalics {	
	font-style: normal;
}
.spl .Bold {	
	font-weight: bold;
}
.spl .Nobold {	
	font-weight: normal;
}
.spl .titlePage {
	margin:0 auto;
	text-align:center;
	width:80%;
}
.spl .titlePage .pageTitle {
	font-size:2em;
	font-weight:bold;
	margin-top:35px;
}
.spl .titlePage .include {
	font-size:1em;
	font-weight:bold;
	margin-top:35px;
}
.spl .titlePage .author {
	font-size:1.2em;
}
.spl .titlePage .productDesc {
	font-size:1em;
	margin-bottom:35px;
}
.spl .titlePage .twoColunm {
	font-size:0.8em;
	margin:0 auto;
	width:80%;
}
.contentBody {
	width:100%;
}
.leftColumn {
	background-color:white;
	display:inline;
	float:left;
	width:25%;
	overflow: auto;
	white-space:nowrap;
}
.leftColumn h1 {
	font-size: 0.9em !important;
}
.leftColumn h2 {
	font-size: 0.8em !important;
}
.leftColumn h3,
.leftColumn h4,
.leftColumn h5 {
	font-size: 0.7em !important;
}
.leftColumn #toc_0999 {
	display:inline;
}
.leftColumn #toc_0999 span {
	float: left;
	margin-top: 10px;
}
.leftColumn #toc_0999 h1 {
	color: blue;
	text-decoration: underline;
}
.leftColumn #toc_0999 h1:hover {
	color: grey;
}
.rightColumn {
	background-color:white;
	float:left;
	height:100%;
	width:70%;
	overflow: auto;
}
.rightColumn #overviewImage {
	padding-top: 3px;
}

.spl .titlePage .submissionNumber {
	clear:both;
	font-size:1em;
	text-align:left;
	font-weight:bold;
	margin:0 auto;
	padding-top:25px;
	width:80%;

}

.spl .titlePage table tr .borderCellLeft {
    border: 1px solid black;
    text-align: left;
}
.spl .titlePage table tr .borderCellRight {
    border: 1px solid black;
    text-align: right;
}
.widthFull {
    width:99%;
}
.widthHalf {
    width:49%;
}
.verticalTop {
 vertical-align: top;
}
.minSpace {
 min-height: 30px;
}
.spl div.floatRight {
    float: right;
    max-width: 400px;
}
.spl .Watermark{
	opacity:0.5;
    z-index:0;
    background:white;
    display:block;
    min-height:50%; 
    min-width:10%;
}
.spl table.WatermarkText{
    z-index:1;
}

.spl .WatermarkTextStyle
{
	display:none;
	position:relative;
    color:red;
    font-size:120px;
    overflow: hidden;
    text-align:center;
	font-stretch: expanded;
	white-space: nowrap;
}

.spl .bold {
    font-weight: bold;
}
.spl div.DataElementsTable{
	margin-left:4ex;
	margin-right:4ex;
}
.expand {
  height: 0px;
  overflow: hidden;
  transition: height 0.5s;
  color: #FFF;
}
.toggle:checked ~ .expand {
  height: auto;
}
.toggle:checked ~ a::before {
  content: "-";
}
.pageHeader {
    display:inline-block;
	font-size: 0.9em;
	font-weight:bold;
	width:99.8%;
}
.pageHeader .pageTitle {
	height:25px;
	text-align: center;
	padding-left:5px;
	padding-right:5px;
	overflow:auto;
	white-space:nowrap;
	width: 100%;
}

.pageHeader #approvedRevisionDateLabel {
	display: inline-block;
	font-size: 80%;
	text-align: left;
	padding-left:3px;
	padding-right:1px;
	white-space:nowrap;
}
.pageHeader #headerDateValue {
	font-size: 80%;
	text-align: left;
	padding-left:5px;
	padding-right:5px;
	white-space:nowrap;
}
.pageHeader #headerBrandName {
	font-size: 80%;
	text-align: left;
	padding-left:20px;
	padding-right:1px;
	white-space:nowrap;
}
.pageHeader #pageHeaderTitle {
	font-size: 80%;
	text-align: left;
	overflow:auto;
	padding-left:1px;
	padding-right:5px;
	white-space:nowrap;
	width:60%
}
.pageHeader table {
	border-spacing: 0;
	width: 100%;
}
::-webkit-scrollbar{
	width:15px;
   	height: 15px;
}
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 0 LIGHTGREY; 
    background-color: #F4F4F4;
}
::-webkit-scrollbar-thumb {
    background-color: lightgrey;
}

.pageHeader .marketStatus {
	float:left;
	padding-left:3px;
	text-align: left;
	min-width: 33%;
}
.pageHeader .approveDate {
}
.pageHeader .leftApproveDate {
	border: 1px solid black;
	float:left;
	font-size: 80%;
	height:25px;
	text-align: center;
	padding-left:5px;
	padding-right:5px;
	width: 120px;
}
.pageHeader .revisionDate {
	padding-top:3px;
}

.overview #topPageImage {
	margin-top:10px;
	margin-bottom:10px;
}

.overview #topPageFootImage {
	margin-top:20px;
}
.addressContainer .address .label {
	display: inline-block;
	min-width: 4em;
}
@media screen and (min-width: 300px) and (max-width: 580px) {
	.leftColumn {
	    width:100%;
		z-index: 2 !important;
	}
	.rightColumn::-webkit-scrollbar {
		width:3px;
	}
	.spl {
		margin-left: 1px !important;
		margin-right:1px !important;
		padding-left: 1px !important;
		padding-right: 1px !important;
	}
	.spl div.Section {
		margin-left:1px;
		margin-right:1px;
	}
	.pageHeader .pageTitle {
		font-size: 60% !important;
	}
	::-webkit-scrollbar{
		width:3px;
	   	height: 3px;
	}
	.pageHeader .approveDate {
		clear:both;
		float:left !important;
		font-size: 60% !important;
		text-align:left !important;
		white-space:nowrap !important;
	}
	.pageHeader .revisionDate {
		clear:both;
		float:left !important;
		font-size: 60% !important;
		text-align:left !important;
		white-space:nowrap !important;
	}
}

